; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_obs_scene_atomic_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_obs_scene_atomic_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_scene_atomic_update(i32* %0, i32 (i8*, i32*)* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32 (i8*, i32*)*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 (i8*, i32*)* %1, i32 (i8*, i32*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %3
  br label %23

10:                                               ; preds = %3
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @obs_scene_addref(i32* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @full_lock(i32* %13)
  %15 = load i32 (i8*, i32*)*, i32 (i8*, i32*)** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 %15(i8* %16, i32* %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @full_unlock(i32* %19)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @obs_scene_release(i32* %21)
  br label %23

23:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @obs_scene_addref(i32*) #1

declare dso_local i32 @full_lock(i32*) #1

declare dso_local i32 @full_unlock(i32*) #1

declare dso_local i32 @obs_scene_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
